// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should have bold font 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 16px;
  line-height: 25px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="16"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have caption1 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="14"
  font-weight="500"
>
  Test
</span>
`;

exports[`<Text /> should have caption2 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 500;
  font-size: 12px;
  line-height: 15px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="12"
  font-weight="500"
>
  Test
</span>
`;

exports[`<Text /> should have color #123456 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 500;
  font-size: 16px;
  line-height: 25px;
  color: #123456;
}

<span
  class="c0"
  color="#123456"
  font-size="16"
  font-weight="500"
>
  Test
</span>
`;

exports[`<Text /> should have default text2 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 500;
  font-size: 16px;
  line-height: 25px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="16"
  font-weight="500"
>
  Test
</span>
`;

exports[`<Text /> should have font-size 20px and line-height 30px 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 500;
  font-size: 20px;
  line-height: 30px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="20"
  font-weight="500"
>
  Test
</span>
`;

exports[`<Text /> should have green (#20A052) from york-core colors 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 500;
  font-size: 16px;
  line-height: 25px;
  color: #20A052;
}

<span
  class="c0"
  color="green"
  font-size="16"
  font-weight="500"
>
  Test
</span>
`;

exports[`<Text /> should have h1 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 40px;
  line-height: 45px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="40"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have h2 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 30px;
  line-height: 35px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="30"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have h3 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 25px;
  line-height: 30px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="25"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have h4 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 20px;
  line-height: 25px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="20"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have light font 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 300;
  font-size: 16px;
  line-height: 25px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="16"
  font-weight="300"
>
  Test
</span>
`;

exports[`<Text /> should have link preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 15px;
  line-height: 25px;
  color: #222222;
  text-transform: uppercase;
}

<span
  class="c0"
  color="coal"
  font-size="15"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have ph1 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 70px;
  line-height: 75px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="70"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have ph2 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 60px;
  line-height: 65px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="60"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have ph3 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 50px;
  line-height: 55px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="50"
  font-weight="700"
>
  Test
</span>
`;

exports[`<Text /> should have text 'Test' 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 500;
  font-size: 16px;
  line-height: 25px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="16"
  font-weight="500"
>
  Test
</span>
`;

exports[`<Text /> should have text1 preset 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 500;
  font-size: 20px;
  line-height: 30px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="20"
  font-weight="500"
>
  Test
</span>
`;

exports[`<Text /> should reassign h1 preset parameters 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 300;
  font-size: 7px;
  line-height: 10px;
  color: #222222;
}

<span
  class="c0"
  color="coal"
  font-size="7"
  font-weight="300"
>
  Test
</span>
`;

exports[`<Text /> should remove link preset uppercase transform 1`] = `
.c0 {
  font-family: MuseoSansCyrl;
  font-weight: 700;
  font-size: 15px;
  line-height: 25px;
  color: #222222;
  text-transform: none;
}

<span
  class="c0"
  color="coal"
  font-size="15"
  font-weight="700"
>
  Test
</span>
`;
